--- a/showroom/roi-bau.ch/baumeister.html
+++ b/showroom/roi-bau.ch/baumeister.html
@@ -69,9 +69,10 @@
 						<p>Vom Bauplan zum fertigem Haus, als Baumeister helfen wir unseren Kunden immer wieder bei Ihren Projekten. Egal ob es ein Neubau ist oder nur eine Renovation unsere Fachkräfte sind immer voll zu Ihrer Unterstützung da.</p>
 					</header>
 					<div class="image main"><img src="images/pic05_1.jpg" alt="" /></div>
-					<p>Wir helfen Ihnen überall mit ihren Bauprojekten, sei es mit einem neuem Vorplatz oder ein neuer Gehweg in den Garten.</p>
+					<p>ROI&amp;BAU GmbH hat sehr viel Erfahrung mit diesem Service. Wir verwenden dabei nur bewährte Ausrüstung und arbeiten mit zuverlässigen Materiallieferanten zusammen. Wir bieten Ihnen professionelle und erfahrene Hilfe bei Ihren Bauarbeiten an, und unterstützen Sie dabei, Ihre individuellen Projekte im Rahmen Ihres Budgets umzusetzen. Wir möchten ausgezeichneten Kundenservice bieten. Deshalb legen wir großen Wert auf klare Kommunikation, damit Sie den Fortschritt der Arbeit in jeder Phase mitverfolgen können.</p>
 					<div class="image main"><img src="images/pic05_2.jpg" alt="" /></div>
 					<p>Zusammen mit unserem Kunden bauen wir ihr neues Zuhause, wir helfen, bauen und sorgen für einen professionelle Umsetzung.</p>
+					<p>>Wir helfen Ihnen überall mit ihren Bauprojekten, sei es mit einem neuem Vorplatz oder ein neuer Gehweg in den Garten.</p>
 				</section>
 
 			</div>
@@ -103,17 +104,17 @@
 					<section class="alt">
 						<h3>Address</h3>
 						<p>
-							1234 Somewhere Road #87257<br />
-							Nashville, TN 00000-0000
+							ROI&amp;BAU GmbH<br />
+							Mina-Hessstrasse 10, 8953 Dietikon
 						</p>
 					</section>
 					<section>
 						<h3>Phone</h3>
-						<p><a href="#">(000) 000-0000</a></p>
+						<p><a href="tel:041786800025">+41 78 680-0025</a></p>
 					</section>
 					<section>
 						<h3>Email</h3>
-						<p><a href="#">info@untitled.tld</a></p>
+						<p><a href="mailto:info@roi-bau.ch">info@roi-bau.ch</a></p>
 					</section>
 					<section>
 						<h3>Social</h3>
@@ -121,11 +122,12 @@
 							<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands alt fa-whatsapp"><span class="label">GitHub</span></a></li>
+							<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="icon brands alt fa-whatsapp"><span class="label">Whatsapp</span></a></li>
 						</ul>
 					</section>
 				</section>
 			</footer>
+
 
 			<!-- Copyright -->
 			<div id="copyright">
