--- a/showroom/roi-bau.ch/index.html
+++ b/showroom/roi-bau.ch/index.html
@@ -48,7 +48,7 @@
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-whatsapp"><span class="label">GitHub</span></a></li>
+							<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="icon brands fa-whatsapp"><span class="label">Whatsapp</span></a></li>
 						</ul>
 					</nav>
 
@@ -56,16 +56,19 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<h2>Und willkommen zu ihrem Professionellen Baumeister</h2>
-									<p>Wir sind ihr persönlicher Berater und Umsetzer bei verschiedensten Bauaufträgen. Von Abbruch zu Trockenbau helfen wir ihnen bei allem. Kontaktieren Sie uns noch heute für eine Beratung. Falls sie Hilfe bei der Renovation oder beim Neubau brauchen, bieten wir Ihnen unsere Partner Architekturen Bürös an, helfen vor Ort mit der Renovation oder auch als Baumeister. Wir bieten Ihnen alles an vom Bauplan zum fertigem Haus.</p>
-								</header>
-								<a href="./referenzen.html" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="./referenzen.html" class="button large">Referenzen</a></li>
-								</ul>
-							</article>
+						<article class="post featured">
+							<header class="major">
+								<h2>IHR BAUUNTERNEHMEN! QUALITÄT STEHT AN ERSTER STELLE</h2>
+								<p> Seit 2021 istROI&amp;BAU GmbH ein zuverlässiger Baudienstleister. Sie möchten ein paar handwerkliche Arbeiten in Ihrem Haus oder Ihren Geschäftsräumen in Angriff nehmen? Bei uns sind Sie richtig. Wir haben in ganz Zürich und Umgebung einen ausgezeichneten Ruf, den wir unserem exzellenten Kundenservice, der stets perfekten Ausführung unserer Arbeit und hervorragenden Qualitätsprodukten verdanken. Setzen Sie sich mit uns in Verbindung, um herauszufinden, was wir für Sie tun können.</p>
+							</header>
+							<a href="./referenzen.html" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+							<ul class="actions special">
+								<li><a href="tel:041786800025" class="button large">Anrufen</a></li>
+							</ul>								
+							<ul class="actions special">
+								<li><a href="./referenzen.html" class="button large">Whatsapp</a></li>
+							</ul>
+						</article>
 
 						<!-- Posts -->
 							<section class="posts">
@@ -104,7 +107,7 @@
 										<h2><a href="./baumeister.html">Baumeister</a></h2>
 									</header>
 									<a href="./baumeister.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Für wertbeständige Bauträger-Projekte in unterschiedlichen Größen und Ausführungen sorgen wir von der Grundstücksfindung und Grundstücksvorbereitung über die Abwicklung des gesamten Bauablaufes bis hin zur zügigen Vermarktung für alles, was Sie von einem professionellen Partner erwarten können. Dies gilt auch für die Realisierung von gewerblich genutzten Immobilien und Investitionsprojekten.</p>
 									<ul class="actions special">
 										<li><a href="./baumeister.html" class="button">Full Story</a></li>
 									</ul>
@@ -114,7 +117,7 @@
 										<h2><a href="./trockenbau.html">Trockenbau</a></h2>
 									</header>
 									<a href="./trockenbau.html" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Mit diesem Service machen Sie Ihr Projekt zum Projekt Ihrer Träume. Unsere Experten erklären Ihnen alle Optionen und beantworten Ihnen alle Fragen. Unser Team arbeitet sehr eng mit jedem einzelnen Kunde zusammen, damit wir Ihren Erwartungen entsprechen und sie übertreffen können. Setzen Sie sich mit uns in Verbindung, um weitere Informationen zu erhalten.</p>
 									<ul class="actions special">
 										<li><a href="./trockenbau.html" class="button">Full Story</a></li>
 									</ul>
@@ -124,7 +127,7 @@
 										<h2><a href="./fliessen_plattenlegen.html">Fliessen und Plattenlegen</a></h2>
 									</header>
 									<a href="./fliessen_plattenlegen.html" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Mit Qualität und Expertise helfen wir Ihnen ihre Träume zu verwirklichen, von Platten bis Plaster bauen wir alles für sie zusammen und helfen Ihnen ihr Projekt schnell und qualitätiv umzusetzen.</p>
 									<ul class="actions special">
 										<li><a href="./fliessen_plattenlegen.html" class="button">Full Story</a></li>
 									</ul>
@@ -159,16 +162,16 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p>ROI&amp;BAU GmbH<br />
+								Mina-Hessstrasse 10, 8953 Dietikon</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="tel:041786800025">+41 78 680-0025</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="mailto:info@roi-bau.ch">info@roi-bau.ch</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
@@ -176,7 +179,7 @@
 									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-whatsapp"><span class="label">GitHub</span></a></li>
+									<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="icon brands alt fa-whatsapp"><span class="label">Whatsapp</span></a></li>
 								</ul>
 							</section>
 						</section>
