--- a/showroom/roi-bau.ch/referenzen.html
+++ b/showroom/roi-bau.ch/referenzen.html
@@ -27,7 +27,7 @@
 			<!-- Intro -->
 			<div id="intro">
 				<h1>Willkommen bei<br /> <img class="image fit" src="./images/logo.png"> </img></h1>
-				<p>Ihr Partner rund um den Bau, füllen sie sich willkommen und lassen sie sich professionel beraten, wir stehen rund um die Uhr zu Ihrer Verfügung.</p>
+				<p>Schon als Kind waren wir fasziniert von der Idee, mit den eigenen Händen funktionierende Strukturen zu bauen. Mit der Gründung von ROI&amp;BAU GmbH im Jahr 2021 wurde dieser Traum in Form eines Unternehmens wahr. Unser Team aus bewährten Bauarbeitern und Monteuren ist da, um Ihre Vorstellungen in konkrete Strukturen umzuwandeln. Rufen Sie uns einfach an, und sagen Sie uns, was Sie sich vorstellen – Wir kümmern uns um den Rest.</p>
 				<ul class="actions">
 					<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 				</ul>
@@ -106,7 +106,7 @@
 							<h2><a href="./refernezen_4.html">Referenz 4</a></h2>
 						</header>
 						<a href="./refernezen_4.html" class="image fit"><img src="images/referenzen_04.jpg" alt="" /></a>
-                        <p>Fensteraufbau für ein Gross Raum Büro Gebäude, unsere Fachkräfte setzten Zusammenbau der Fenster und Montage vor Ort um.</p>
+						<p>Fensteraufbau für ein Gross Raum Büro Gebäude, unsere Fachkräfte setzten Zusammenbau der Fenster und Montage vor Ort um.</p>
 						<ul class="actions special">
 							<li><a href="./refernezen_4.html" class="button">Referenz 4</a></li>
 						</ul>
@@ -162,17 +162,17 @@
 					<section class="alt">
 						<h3>Address</h3>
 						<p>
-							1234 Somewhere Road #87257<br />
-							Nashville, TN 00000-0000
+							ROI&amp;BAU GmbH<br />
+							Mina-Hessstrasse 10, 8953 Dietikon
 						</p>
 					</section>
 					<section>
 						<h3>Phone</h3>
-						<p><a href="#">(000) 000-0000</a></p>
+						<p><a href="tel:041786800025">+41 78 680-0025</a></p>
 					</section>
 					<section>
 						<h3>Email</h3>
-						<p><a href="#">info@untitled.tld</a></p>
+						<p><a href="mailto:info@roi-bau.ch">info@roi-bau.ch</a></p>
 					</section>
 					<section>
 						<h3>Social</h3>
@@ -180,11 +180,12 @@
 							<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands alt fa-whatsapp"><span class="label">GitHub</span></a></li>
+							<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="icon brands alt fa-whatsapp"><span class="label">Whatsapp</span></a></li>
 						</ul>
 					</section>
 				</section>
 			</footer>
+
 
 			<!-- Copyright -->
 			<div id="copyright">
