--- a/showroom/roi-bau.ch/referenzen_4.html
+++ b/showroom/roi-bau.ch/referenzen_4.html
@@ -167,17 +167,17 @@
 					<section class="alt">
 						<h3>Address</h3>
 						<p>
-							1234 Somewhere Road #87257<br />
-							Nashville, TN 00000-0000
+							ROI&amp;BAU GmbH<br />
+							Mina-Hessstrasse 10, 8953 Dietikon
 						</p>
 					</section>
 					<section>
 						<h3>Phone</h3>
-						<p><a href="#">(000) 000-0000</a></p>
+						<p><a href="tel:041786800025">+41 78 680-0025</a></p>
 					</section>
 					<section>
 						<h3>Email</h3>
-						<p><a href="#">info@untitled.tld</a></p>
+						<p><a href="mailto:info@roi-bau.ch">info@roi-bau.ch</a></p>
 					</section>
 					<section>
 						<h3>Social</h3>
@@ -185,11 +185,12 @@
 							<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands alt fa-whatsapp"><span class="label">GitHub</span></a></li>
+							<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="icon brands alt fa-whatsapp"><span class="label">Whatsapp</span></a></li>
 						</ul>
 					</section>
 				</section>
 			</footer>
+
 
 			<!-- Copyright -->
 			<div id="copyright">
