--- a/showroom/roi-bau.ch/referenzen_6.html
+++ b/showroom/roi-bau.ch/referenzen_6.html
@@ -64,7 +64,7 @@
 				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 				<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-				<li><a href="#" class="icon brands fa-whatsapp"><span class="label">GitHub</span></a></li>
+				<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="icon brands fa-whatsapp"><span class="label">WhatsApp</span></a></li>
 			</ul>
 		</nav>
 
@@ -176,17 +176,17 @@
 				<section class="alt">
 					<h3>Address</h3>
 					<p>
-						1234 Somewhere Road #87257<br />
-						Nashville, TN 00000-0000
+						ROI&amp;BAU GmbH<br />
+						Mina-Hessstrasse 10, 8953 Dietikon
 					</p>
 				</section>
 				<section>
 					<h3>Phone</h3>
-					<p><a href="#">(000) 000-0000</a></p>
+					<p><a href="tel:041786800025">+41 78 680-0025</a></p>
 				</section>
 				<section>
 					<h3>Email</h3>
-					<p><a href="#">info@untitled.tld</a></p>
+					<p><a href="mailto:info@roi-bau.ch">info@roi-bau.ch</a></p>
 				</section>
 				<section>
 					<h3>Social</h3>
