--- a/showroom/roi-bau.ch/index.html
+++ b/showroom/roi-bau.ch/index.html
@@ -66,7 +66,7 @@
 								<li><a href="tel:041786800025" class="button large">Anrufen</a></li>
 							</ul>								
 							<ul class="actions special">
-								<li><a href="./referenzen.html" class="button large">Whatsapp</a></li>
+								<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="button large">Whatsapp</a></li>
 							</ul>
 						</article>
 
