--- a/showroom/roi-bau.ch/referenzen.html
+++ b/showroom/roi-bau.ch/referenzen.html
@@ -52,7 +52,7 @@
 
 				</ul>
 				<ul class="icons">
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="icon brands fa-whatsapp"><span class="label">GitHub</span></a></li>
@@ -177,7 +177,7 @@
 					<section>
 						<h3>Social</h3>
 						<ul class="icons alt">
-							<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="icon brands alt fa-whatsapp"><span class="label">Whatsapp</span></a></li>
