--- a/showroom/roi-bau.ch/referenzen.html
+++ b/showroom/roi-bau.ch/referenzen.html
@@ -73,62 +73,62 @@
 				<section class="posts">
 					<article>
 						<header>
-							<h2><a href="./refernezen_1.html">Referenz 1</a></h2>
+							<h2><a href="./referenzen_1.html">Referenz 1</a></h2>
 						</header>
-						<a href="./refernezen_1.html" class="image fit"><img src="images/referenzen_01.jpg" alt="" /></a>
+						<a href="./referenzen_1.html" class="image fit"><img src="images/referenzen_01.jpg" alt="" /></a>
 						<p>Fenster Aufbau für einen Wintergarten, für diesen Anbau führten wir den Zusammenbau der Fenster und die Montage vor Ort um.</p>
 						<ul class="actions special">
-							<li><a href="./refernezen_1.html" class="button">Referenz 1</a></li>
+							<li><a href="./referenzen_1.html" class="button">Referenz 1</a></li>
 						</ul>
 					</article>
 					<article>
 						<header>
-							<h2><a href="./refernezen_2.html">Referenz 2</h2>
+							<h2><a href="./referenzen_2.html">Referenz 2</h2>
 						</header>
-						<a href="./refernezen_2.html" class="image fit"><img src="images/referenzen_02.jpg" alt="" /></a>
+						<a href="./referenzen_2.html" class="image fit"><img src="images/referenzen_02.jpg" alt="" /></a>
 						<p>Fensteraufbau für ein Anwesen, von unserem Team wurden Zusammenbau, Montage und Plannung übernommen.</p>
 						<ul class="actions special">
-							<li><a href="./refernezen_2.html" class="button">Referenz 2</a></li>
+							<li><a href="./referenzen_2.html" class="button">Referenz 2</a></li>
 						</ul>
 					</article>
 					<article>
 						<header>
-							<h2><a href="refernezen_3.html">Referenz 3</a></h2>
+							<h2><a href="referenzen_3.html">Referenz 3</a></h2>
 						</header>
-						<a href="refernezen_3.html" class="image fit"><img src="images/referenzen_03.jpg" alt="" /></a>
+						<a href="referenzen_3.html" class="image fit"><img src="images/referenzen_03.jpg" alt="" /></a>
 						<p>Fensteraufbau für ein Büro, wir ubernahmen den Zusammenbau und die Montage zusammen mit den Fachkräften vor Ort.</p>
 						<ul class="actions special">
-							<li><a href="refernezen_3.html" class="button">Referenz 3</a></li>
+							<li><a href="referenzen_3.html" class="button">Referenz 3</a></li>
 						</ul>
 					</article>
 					<article>
 						<header>
-							<h2><a href="./refernezen_4.html">Referenz 4</a></h2>
+							<h2><a href="./referenzen_4.html">Referenz 4</a></h2>
 						</header>
-						<a href="./refernezen_4.html" class="image fit"><img src="images/referenzen_04.jpg" alt="" /></a>
+						<a href="./referenzen_4.html" class="image fit"><img src="images/referenzen_04.jpg" alt="" /></a>
 						<p>Fensteraufbau für ein Gross Raum Büro Gebäude, unsere Fachkräfte setzten Zusammenbau der Fenster und Montage vor Ort um.</p>
 						<ul class="actions special">
-							<li><a href="./refernezen_4.html" class="button">Referenz 4</a></li>
+							<li><a href="./referenzen_4.html" class="button">Referenz 4</a></li>
 						</ul>
 					</article>
 					<article>
 						<header>
-							<h2><a href="./refernezen_5.html">Referenz 5</a></h2>
+							<h2><a href="./referenzen_5.html">Referenz 5</a></h2>
 						</header>
-						<a href="./refernezen_5.html" class="image fit"><img src="images/referenzen_05.jpg" alt="" /></a>
+						<a href="./referenzen_5.html" class="image fit"><img src="images/referenzen_05.jpg" alt="" /></a>
 						<p>Fensteraufbau für ein kleinen Anbau, wir übernahmen Fenster Zusammenbau und teil der Montage vor Ort.</p>
 						<ul class="actions special">
-							<li><a href="./refernezen_5.html" class="button">Referenz 5</a></li>
+							<li><a href="./referenzen_5.html" class="button">Referenz 5</a></li>
 						</ul>
 					</article>
 					<article>
 						<header>
-							<h2><a href="./refernezen_6.html">Referenz 6</a></h2>
+							<h2><a href="./referenzen_6.html">Referenz 6</a></h2>
 						</header>
-						<a href="./refernezen_6.html" class="image fit"><img src="images/referenzen_06.jpg" alt="" /></a>
+						<a href="./referenzen_6.html" class="image fit"><img src="images/referenzen_06.jpg" alt="" /></a>
 						<p>Aushub und Zuschütten eines Garten von einer Einfamilienwohnung.</p>
 						<ul class="actions special">
-							<li><a href="./refernezen_6.html" class="button">Referenz 6</a></li>
+							<li><a href="./referenzen_6.html" class="button">Referenz 6</a></li>
 						</ul>
 					</article>
 				</section>
