--- a/showroom/roi-bau.ch/referenzen_2.html
+++ b/showroom/roi-bau.ch/referenzen_2.html
@@ -70,74 +70,11 @@
 					</header>
 					<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 					<ul class="actions special">
-						<li><a href="#" class="button large">Full Story</a></li>
+						<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="button large">Whatsapp</a></li>
 					</ul>
 				</article>
 
-				<!-- Posts -->
-				<section class="posts">
-					<article>
-						<header>
-							<h2><a href="./abbruch.html">Abbruch</a></h2>
-						</header>
-						<a href="./abbruch.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-						<p>Falls sie Beihilfe bei der Renovation brauchen, bieten wir Ihnen ein Team und Fahrzeuge zur Umsetzung an, der Komplette Abbau wird von unserem Team Ihren Wünschen nach umgesetzt.</p>
-						<ul class="actions special">
-							<li><a href="./abbruch.html" class="button">Produkt und Referenzen</a></li>
-						</ul>
-					</article>
-					<article>
-						<header>
-							<h2><a href="./aushub.html">Aushub</h2>
-						</header>
-						<a href="./aushub.html" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-						<p>Hier helfen wir Ihnen bei der kompletten massgeschneiderten Lösung für Sie. Wir bieten Bagger Arbeiten an und helfen bei Fundament, Neugrabung des Gartens oder setzen einer neuen Steintreppe.</p>
-						<ul class="actions special">
-							<li><a href="./aushub.html" class="button">Aushub</a></li>
-						</ul>
-					</article>
-					<article>
-						<header>
-							<h2><a href="kanalisation.html">Kanalisation</a></h2>
-						</header>
-						<a href="kanalisation.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-						<p>Auch bei Sanitärs-Lösungen haben unsere Experten alles bereit um Ihnen zu helfen, vom Legen der Rohre bis zur Kanalisation, alles wird von unseren Experten übernommen.</p>
-						<ul class="actions special">
-							<li><a href="kanalisation.html" class="button">Kanalisation</a></li>
-						</ul>
-					</article>
-					<article>
-						<header>
-							<h2><a href="./baumeister.html">Baumeister</a></h2>
-						</header>
-						<a href="./baumeister.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-						<p>Zusammen mit unserem Partner können sie einen Bauplan erstellen und wir übernehmen die komplette Umsetzung, sehen sie unter unseren Referenzen, wie der Komplett umbau übernommen und ausgeführt wird.</p>
-						<ul class="actions special">
-							<li><a href="./baumeister.html" class="button">Baumeister</a></li>
-						</ul>
-					</article>
-					<article>
-						<header>
-							<h2><a href="./trockenbau.html">Trockenbau</a></h2>
-						</header>
-						<a href="./trockenbau.html" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-						<p>Auch im Innenbereich sind unsere Experten stets auf vollste Kundenzufriedenheit aus, wir bauen um renovieren oder bauen neu, egal ob Büro, Haushalt oder Lager wir sind stets die Kundenwünsche am umsetzen.</p>
-						<ul class="actions special">
-							<li><a href="./trockenbau.html" class="button">Trockenbau und Montage</a></li>
-						</ul>
-					</article>
-					<article>
-						<header>
-							<h2><a href="./fliessen_plattenlegen.html">Fliessen und Plattenlegen</a></h2>
-						</header>
-						<a href="./fliessen_plattenlegen.html" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-						<p>Falls ihre Wohnung oder ihr Büro ein neuen Holzboden oder Steinboden braucht sind wir dazu da Ihnen einen neuen Boden oder Fliessen zu legen, wir helfen und setzen um.</p>
-						<ul class="actions special">
-							<li><a href="./fliessen_plattenlegen.html" class="button">Fliessen und Plattenlegen</a></li>
-						</ul>
-					</article>
-				</section>
-
+				
 			</div>
 
 			<!-- Footer -->
