--- a/showroom/roi-bau.ch/index.html
+++ b/showroom/roi-bau.ch/index.html
@@ -125,16 +125,16 @@
 					<!-- The four columns -->
 					<div class="row">
 						<div class="column">
-							<img src="./images/pic01.jpg" alt="Innenbüro mit Glasmontage" style="width:100%" onclick="myFunction(this);">
+							<img src="./images/referenzen_01" alt="Innenbüro mit Glasmontage" style="width:100%" onclick="myFunction(this);">
 						</div>
 						<div class="column">
-							<img src="./images/referenzen_01.jpg" alt="Wintergarten mit Glasarbeit" style="width:100%" onclick="myFunction(this);">
+							<img src="./images/referenzen_02.jpg" alt="Wintergarten mit Glasarbeit" style="width:100%" onclick="myFunction(this);">
 						</div>
 						<div class="column">
-							<img src="./images/referenzen_02.jpg" alt="Privathaus mit Fenstermontur" style="width:100%" onclick="myFunction(this);">
+							<img src="./images/referenzen_03.jpg" alt="Privathaus mit Fenstermontur" style="width:100%" onclick="myFunction(this);">
 						</div>
 						<div class="column">
-							<img src="./images/referenzen_03.jpg" alt="Grossraumbüro mit Fenstermontur" style="width:100%" onclick="myFunction(this);">
+							<img src="./images/referenzen_04.jpg" alt="Grossraumbüro mit Fenstermontur" style="width:100%" onclick="myFunction(this);">
 						</div>
 					</div>
 
@@ -204,7 +204,7 @@
 						<a href="./baumeister.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 						<p>Für wertbeständige Bauträger-Projekte in unterschiedlichen Größen und Ausführungen sorgen wir von der Grundstücksfindung und Grundstücksvorbereitung über die Abwicklung des gesamten Bauablaufes bis hin zur zügigen Vermarktung für alles, was Sie von einem professionellen Partner erwarten können. Dies gilt auch für die Realisierung von gewerblich genutzten Immobilien und Investitionsprojekten.</p>
 						<ul class="actions special">
-							<li><a href="./baumeister.html" class="button">Full Story</a></li>
+							<li><a href="./baumeister.html" class="button">Baumeister</a></li>
 						</ul>
 					</article>
 					<article>
@@ -214,7 +214,7 @@
 						<a href="./trockenbau.html" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 						<p>Mit diesem Service machen Sie Ihr Projekt zum Projekt Ihrer Träume. Unsere Experten erklären Ihnen alle Optionen und beantworten Ihnen alle Fragen. Unser Team arbeitet sehr eng mit jedem einzelnen Kunde zusammen, damit wir Ihren Erwartungen entsprechen und sie übertreffen können. Setzen Sie sich mit uns in Verbindung, um weitere Informationen zu erhalten.</p>
 						<ul class="actions special">
-							<li><a href="./trockenbau.html" class="button">Full Story</a></li>
+							<li><a href="./trockenbau.html" class="button">Trockenbau</a></li>
 						</ul>
 					</article>
 					<article>
@@ -224,7 +224,7 @@
 						<a href="./fliessen_plattenlegen.html" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 						<p>Mit Qualität und Expertise helfen wir Ihnen ihre Träume zu verwirklichen, von Platten bis Plaster bauen wir alles für sie zusammen und helfen Ihnen ihr Projekt schnell und qualitätiv umzusetzen.</p>
 						<ul class="actions special">
-							<li><a href="./fliessen_plattenlegen.html" class="button">Full Story</a></li>
+							<li><a href="./fliessen_plattenlegen.html" class="button">Plattenlegen</a></li>
 						</ul>
 					</article>
 				</section>
