--- a/showroom/roi-bau.ch/referenzen_2.html
+++ b/showroom/roi-bau.ch/referenzen_2.html
@@ -68,7 +68,7 @@
 						<h2><a href="#">Und willkommen zu ihrem Professionellen Baumeister</a></h2>
 						<p>Wir sind ihr persönlicher Berater und Umsetzer bei verschiedensten Bauaufträgen. Von Abbruch zu Trockenbau helfen wir ihnen bei allem. Kontaktieren Sie uns noch heute für eine Beratung. Falls sie Hilfe bei der Renovation oder beim Neubau brauchen, bieten wir Ihnen unsere Partner Architekturen Bürös an, helfen vor Ort mit der Renovation oder auch als Baumeister. Wir bieten Ihnen alles an vom Bauplan zum fertigem Haus.</p>
 					</header>
-					<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+					<a href="#" class="image main"><img src="images/referenzen_02.jpg" alt="" /></a>
 					<ul class="actions special">
 						<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="button large">Whatsapp</a></li>
 					</ul>
