--- a/showroom/roi-bau.ch/referenzen_6.html
+++ b/showroom/roi-bau.ch/referenzen_6.html
@@ -21,14 +21,6 @@
 </head>
 <body class="is-preload">
 
-	<!-- Intro -->
-	<div id="intro">
-		<h1>Willkommen bei<br /> <img class="image fit" src="./images/logo.png"> </img></h1>
-		<p>Ihr Partner rund um den Bau, füllen sie sich willkommen und lassen sie sich professionel beraten, wir stehen rund um die Uhr zu Ihrer Verfügung.</p>
-		<ul class="actions">
-			<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-		</ul>
-	</div>
 
 	<!-- Wrapper -->
 	<div id="wrapper" class="fade-in">
@@ -77,7 +69,7 @@
 					<h2><a href="#">Und willkommen zu ihrem Professionellen Baumeister</a></h2>
 					<p>Wir sind ihr persönlicher Berater und Umsetzer bei verschiedensten Bauaufträgen. Von Abbruch zu Trockenbau helfen wir ihnen bei allem. Kontaktieren Sie uns noch heute für eine Beratung. Falls sie Hilfe bei der Renovation oder beim Neubau brauchen, bieten wir Ihnen unsere Partner Architekturen Bürös an, helfen vor Ort mit der Renovation oder auch als Baumeister. Wir bieten Ihnen alles an vom Bauplan zum fertigem Haus.</p>
 				</header>
-				<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+				<a href="#" class="image main"><img src="./images/referenzen_06.jpg" alt="" /></a>
 				<ul class="actions special">
 					<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="button large">Whatsapp</a></li>
 				</ul>
