--- a/showroom/roi-bau.ch/referenzen_5.html
+++ b/showroom/roi-bau.ch/referenzen_5.html
@@ -92,7 +92,7 @@
 								<input type="text" name="email" id="email" />
 							</div>
 							<div class="field">
-								<label for="message">Message</label>
+								<label for="message">Nachricht</label>
 								<textarea name="message" id="message" rows="3"></textarea>
 							</div>
 						</div>
@@ -104,14 +104,14 @@
 				<section class="split contact">
 					<div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2700.0835695642572!2d8.4064403!3d47.4103111!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479abb0c69e038cb%3A0x4842403f12797e1f!2sMina%20Hess-Strasse%2010%2C%208953%20Dietikon!5e0!3m2!1sde!2sch!4v1665554183389!5m2!1sde!2sch" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
 					<section class="alt">
-						<h3>Address</h3>
+						<h3>Addresse</h3>
 						<p>
 							ROI&amp;BAU GmbH<br />
 							Mina-Hessstrasse 10, 8953 Dietikon
 						</p>
 					</section>
 					<section>
-						<h3>Phone</h3>
+						<h3>Telefon</h3>
 						<p><a href="tel:041786800025">+41 78 680-0025</a></p>
 					</section>
 					<section>
