--- a/showroom/roi-bau.ch/aushub.html
+++ b/showroom/roi-bau.ch/aushub.html
@@ -9,6 +9,11 @@
 	<title>ROI GmbH - Aushub</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta property="og:url" content="http://roi-bau.ch" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="ROI & BAU GmbH lassen sie ihre Bauwünsche von uns zu ihrem Traumprojekt verwandeln." />
+	<meta property="og:description" content="Vom Bauplan zum Traumprojekt." />
+	<meta property="og:image" content="http://roi-bau.ch/images/linkshare.jpg" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	<link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
@@ -71,8 +76,11 @@
 					<div class="image main"><img src="images/pic03_1.jpg" alt="" /></div>
 					<p>Unsere Experten heben aus, messen die Gräde und führen für sie Bagger und Spatten. Ob Nur kleine Wandarbeit oder ein komplett neues Fundament legen, für unsere Kunden machen wir alles. Fachmännisch und professionell.</p>
 					<div class="image main"><img src="images/pic03_2.jpg" alt="" /></div>
-					<p>Wenn sie eine grösseren Aushub mit Bagger benötigen, so können wir innert Tagen Fachkräft zur Verfügung geben und fachmännisch sie unterstützen.</p>
+					<p>Wenn sie eine grösseren Aushub mit Bagger benötigen, so können wir innert Tagen Fachkräft zur Verfügung geben und fachmännisch Sie unterstützen.</p>
 					<p>Rufen sie noch heute ab oder schicken sie uns eine Whatsapp Nachricht für eine Beratung.</p>
+					<ul class="actions special">
+						<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="button large">Whatsapp</a></li>
+					</ul>
 				</section>
 
 			</div>
