--- a/showroom/roi-bau.ch/fliessen_plattenlegen.html
+++ b/showroom/roi-bau.ch/fliessen_plattenlegen.html
@@ -9,6 +9,11 @@
 	<title>Willkommen bei Roi Bau</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta property="og:url" content="http://roi-bau.ch" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="ROI & BAU GmbH lassen sie ihre Bauwünsche von uns zu ihrem Traumprojekt verwandeln." />
+	<meta property="og:description" content="Vom Bauplan zum Traumprojekt." />
+	<meta property="og:image" content="http://roi-bau.ch/images/linkshare.jpg" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	<link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
@@ -73,6 +78,9 @@
 					<p>Wir setzen ihr Neubau oder Renovation um, auch im Bereich Boden sind unsere Fachkräfte stetts bemüht Ihnen jeden Kundenwunsch umzusetzen.</p>
 					<div class="image main"><img src="images/pic07_2.jpg" alt="" /></div>
 					<p>Wenn sie Hilfe brauchen bei der Umsetzung eines neuen Bodens zögern Sie nicht uns zu schreiben.</p>
+					<ul class="actions special">
+						<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="button large">Whatsapp</a></li>
+					</ul>
 				</section>
 
 			</div>
