--- a/showroom/roi-bau.ch/index.html
+++ b/showroom/roi-bau.ch/index.html
@@ -5,74 +5,80 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Willkommen bei Roi Bau</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<style>
-			* {
-				box-sizing: border-box;
-			}
+<head>
+	<title>Willkommen bei Roi Bau</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta property="og:url" content="http://roi-bau.ch" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="ROI & BAU GmbH lassen sie ihre Bauwünsche von uns zu ihrem Traumprojekt verwandeln." />
+	<meta property="og:description" content="Vom Bauplan zum Traumprojekt." />
+	<meta property="og:image" content="http://roi-bau.ch/images/linkshare.jpg" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<style>
+		* {
+			box-sizing: border-box;
+		}
 
-			body {
-				margin: 0;
-				font-family: Arial;
-			}
+		body {
+			margin: 0;
+			font-family: Arial;
+		}
 
-			/* The grid: Four equal columns that floats next to each other */
-			.column {
-				float: left;
-				width: 25%;
-				padding: 10px;
-			}
+		/* The grid: Four equal columns that floats next to each other */
+		.column {
+			float: left;
+			width: 25%;
+			padding: 10px;
+		}
 
-				/* Style the images inside the grid */
-				.column img {
-					opacity: 0.8;
-					cursor: pointer;
-				}
-
-					.column img:hover {
-						opacity: 1;
-					}
-			article .row{
-				margin-left: 0px;
-			}
-			/* Clear floats after the columns */
-			.row:after {
-				content: "";
-				display: table;
-				clear: both;
-			}
-
-			/* The expanding image container */
-			.container {
-				position: relative;
-				display: none;
-			}
-
-			/* Expanding image text */
-			#imgtext {
-				position: absolute;
-				bottom: 15px;
-				left: 15px;
-				color: white;
-				font-size: 20px;
-			}
-
-			/* Closable button inside the expanded image */
-			.closebtn {
-				position: absolute;
-				top: 10px;
-				right: 15px;
-				color: white;
-				font-size: 35px;
+			/* Style the images inside the grid */
+			.column img {
+				opacity: 0.8;
 				cursor: pointer;
 			}
-		</style>
-	</head>
+
+				.column img:hover {
+					opacity: 1;
+				}
+
+		article .row {
+			margin-left: 0px;
+		}
+		/* Clear floats after the columns */
+		.row:after {
+			content: "";
+			display: table;
+			clear: both;
+		}
+
+		/* The expanding image container */
+		.container {
+			position: relative;
+			display: none;
+		}
+
+		/* Expanding image text */
+		#imgtext {
+			position: absolute;
+			bottom: 15px;
+			left: 15px;
+			color: white;
+			font-size: 20px;
+		}
+
+		/* Closable button inside the expanded image */
+		.closebtn {
+			position: absolute;
+			top: 10px;
+			right: 15px;
+			color: white;
+			font-size: 35px;
+			cursor: pointer;
+		}
+	</style>
+</head>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -81,7 +87,7 @@
 			<!-- Intro -->
 			<div id="intro">
 				<h1>Willkommen bei<br /> <img class="image fit" src="./images/logo.png"> </img></h1>
-				<p>Ihr Partner rund um den Bau, füllen sie sich willkommen und lassen sie sich professionel beraten, wir stehen rund um die Uhr zu Ihrer Verfügung.</p>
+				<h2>Ihr Partner rund um den Bau, füllen sie sich willkommen und lassen sie sich professionel beraten, wir stehen rund um die Uhr zu Ihrer Verfügung.</h2>
 				<ul class="actions">
 					<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 				</ul>
