--- a/showroom/roi-bau.ch/kanalisation.html
+++ b/showroom/roi-bau.ch/kanalisation.html
@@ -9,6 +9,11 @@
 	<title>Generic Page - Massively by HTML5 UP</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta property="og:url" content="http://roi-bau.ch" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="ROI & BAU GmbH lassen sie ihre Bauwünsche von uns zu ihrem Traumprojekt verwandeln." />
+	<meta property="og:description" content="Vom Bauplan zum Traumprojekt." />
+	<meta property="og:image" content="http://roi-bau.ch/images/linkshare.jpg" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	<link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
@@ -72,6 +77,9 @@
 					<p>Unsere Fachmänner heben die Rohre auf, legen neue oder ersetzen alte Rohre.</p>
 					<div class="image main"><img src="images/pic04_2.jpg" alt="" /></div>
 					<p>Falls sie ein neues Rohr legen müssen, Kanalisationsarbeiten haben oder einfach eine Renovation der Anlage wünschen so können wir schnell und fachgerecht Ihnen helfen.</p>
+					<ul class="actions special">
+						<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="button large">Whatsapp</a></li>
+					</ul>
 				</section>
 
 			</div>
