--- a/showroom/roi-bau.ch/referenzen_6.html
+++ b/showroom/roi-bau.ch/referenzen_6.html
@@ -9,6 +9,11 @@
 	<title>Willkommen bei Roi Bau</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta property="og:url" content="http://roi-bau.ch" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="ROI & BAU GmbH lassen sie ihre Bauwünsche von uns zu ihrem Traumprojekt verwandeln." />
+	<meta property="og:description" content="Vom Bauplan zum Traumprojekt." />
+	<meta property="og:image" content="http://roi-bau.ch/images/linkshare.jpg" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	<link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
@@ -69,7 +74,9 @@
 					<h2><a href="#">Und willkommen zu ihrem Professionellen Baumeister</a></h2>
 					<p>Wir sind ihr persönlicher Berater und Umsetzer bei verschiedensten Bauaufträgen. Von Abbruch zu Trockenbau helfen wir ihnen bei allem. Kontaktieren Sie uns noch heute für eine Beratung. Falls sie Hilfe bei der Renovation oder beim Neubau brauchen, bieten wir Ihnen unsere Partner Architekturen Bürös an, helfen vor Ort mit der Renovation oder auch als Baumeister. Wir bieten Ihnen alles an vom Bauplan zum fertigem Haus.</p>
 				</header>
-				<a href="#" class="image main"><img src="./images/referenzen_06.jpg" alt="" /></a>
+				<img class="image main" src="./images/referenzen_06.jpg" alt="" />
+				<p>Für dieses Privat Anwesen konnten wir ein Aushub des Garten machen um das Land ein bisschen mehr zu flächen.</p>
+				<p>Der Kunde staunte nicht schlecht als er sah wie schnell und professionell wir waren.</p>
 				<ul class="actions special">
 					<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="button large">Whatsapp</a></li>
 				</ul>
