--- a/showroom/roi-bau.ch/kanalisation.html
+++ b/showroom/roi-bau.ch/kanalisation.html
@@ -46,10 +46,10 @@
 			<!-- Nav -->
 			<nav id="nav">
 				<ul class="links">
-					<li class="active"><a href="index.html">Willkommen</a></li>
+					<li><a href="index.html">Willkommen</a></li>
 					<li><a href="referenzen.html">Referenzen</a></li>
 					<li><a href="aushub.html">Aushub</a></li>
-					<li><a href="kanalisation.html">Kanalisation</a></li>
+					<li class="active"><a href="kanalisation.html">Kanalisation</a></li>
 					<li><a href="baumeister.html">Baumeister</a></li>
 					<li><a href="abbruch.html">Abbruch</a></li>
 					<li><a href="trockenbau.html">Trockenbau</a></li>
