--- a/showroom/roi-bau.ch/referenzen_6.html
+++ b/showroom/roi-bau.ch/referenzen_6.html
@@ -47,8 +47,8 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="links">
-				<li class="active"><a href="index.html">Willkommen</a></li>
-				<li><a href="referenzen.html">Referenzen</a></li>
+				<li ><a href="index.html">Willkommen</a></li>
+				<li class="active"><a href="referenzen.html">Referenzen</a></li>
 				<li><a href="abbruch.html">Abbruch</a></li>
 				<li><a href="aushub.html">Aushub</a></li>
 				<li><a href="kanalisation.html">Kanalisation</a></li>
