--- a/showroom/roi-bau.ch/referenzen_2.html
+++ b/showroom/roi-bau.ch/referenzen_2.html
@@ -13,7 +13,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="ROI & BAU GmbH lassen sie ihre Bauwünsche von uns zu ihrem Traumprojekt verwandeln." />
 	<meta property="og:description" content="Vom Bauplan zum Traumprojekt." />
-	<meta property="og:image" content="http://roi-bau.ch/images/linkshare.jpg" />
+	<meta property="og:image" content="./images/linkshare.jpg" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	<link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
