--- a/showroom/roi-bau.ch/trockenbau.html
+++ b/showroom/roi-bau.ch/trockenbau.html
@@ -13,7 +13,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="ROI & BAU GmbH lassen sie ihre Bauwünsche von uns zu ihrem Traumprojekt verwandeln." />
 	<meta property="og:description" content="Vom Bauplan zum Traumprojekt." />
-	<meta property="og:image" content="./images/linkshare.jpg" />
+	<meta property="og:image" content="http://roi-bau.ch/images/linkshare.jpg" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	<link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
@@ -74,9 +74,9 @@
 					<p>Auch im Innenbereich helfen unsere Fachmänner unseren Kunden immer wieder, von Ziehen einer Wand mit Isiolation bis zum legen von Fenster.</p>
 				</header>
 				<div class="image main"><img src="images/pic06_1.jpg" alt="" /></div>
-				<p>Lassen sie von uns ihre Wände neu beziehen, bis zum Malen bieten wir Ihnen alles an.</p>
+				<p>Lassen sie von uns ihre Wände neu beziehen, bis zum Malen bieten wir Ihnen alles an. Unsere Fachkräft übernehmen von Ihnen ihre Wünsche und verwandeln ihr Heimprojekt zum Bauplan ihrer Wünsche. Durch unsere Fachkräfte werden ihre Wünsche fachgerecht umgesetzt.</p>
 				<div class="image main"><img src="images/pic06_2.jpg" alt="" /></div>
-				<p>Auch einfach Wandisolation sind für unsere Fachkräft kein Problem.</p>
+				<p>Hier sehen sie unser Fachpersonal beim Umsetzen einer Wandisiolation für ein Raum. Unser Team setzt alle Ihre Wünsche um, genau so wie Sie es fordern.</p>
 				<ul class="actions special">
 					<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="button large">Whatsapp</a></li>
 				</ul>
